--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,14 @@
 }
 
 @font-face {
+  font-family: din1;
+  src: url(/public//D-DIN.otf);
+}
+.din1 {
+  font-family: din1;
+}
+
+@font-face {
   font-family: din;
   src: url(/public//D-Din\ Bold\ Font.ttf);
 }
@@ -33,8 +41,14 @@
   font-family: din2;
 }
 
+.Back5 {
+  background: url("/src//Images/back1.jpg") no-repeat center center/cover;
+  height: 100vh;
+  width: 100%;
+}
+
 #backOneimage {
-  background: url("/src//Images//back1.jpg") no-repeat center center/cover;
+  background: url("/src//Images//back5.jpg") no-repeat center center/cover;
   height: 100vh;
   width: 100%;
 }
@@ -304,4 +318,88 @@
 #myName a {
   color: red;
   text-decoration: none;
+}
+
+/* LAUNCH AREA */
+
+#backLaunch {
+  background-color: black;
+}
+
+#ImageLaunch {
+  height: 100vh;
+}
+
+.textt {
+  font-size: 18px;
+  font-family: din;
+  font-weight: 400;
+}
+
+#rowData1 {
+  font-family: din1;
+  font-size: 16px;
+}
+
+#firstCol {
+  line-height: 26px;
+}
+
+#seCol {
+  line-height: 24px;
+}
+
+#sizingImg {
+  height: 60vh;
+}
+
+#nn {
+  size: 6px;
+  font-family: din;
+  font-weight: 700;
+}
+
+@media screen and (min-width: 1px) and (max-width: 905px) {
+  #ImageLaunch {
+    object-fit: cover;
+    width: 97%;
+    height: 90vh;
+  }
+}
+
+@media screen and (min-width: 1px) and (max-width: 840px) {
+  #reverse {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1px) and (max-width: 812px) {
+  #sizingImg {
+    height: 29vh;
+  }
+
+  #ImageLaunch {
+    margin-top: 7.5em;
+    object-fit: cover;
+    width: 100%;
+    height: 50vh;
+  }
+}
+
+@media screen and (min-width: 1px) and (max-width: 375px) {
+  #reverse {
+    display: flex-box;
+    flex-direction: column;
+    margin-right: 6.5em;
+  }
+}
+
+@media screen and (min-width: 376px) and (max-width: 585px) {
+  #reverse {
+    display: flex-box;
+    flex-direction: column;
+    margin-right: 10em;
+  }
 }
